--- a/webapi-express/public/stylesheets/home.css
+++ b/webapi-express/public/stylesheets/home.css
@@ -1,23 +1,19 @@
 .top-wrapper {
   height: 100vh;
   background-image: url("/assets/img/smms_bg.jpg");
-  background-size: 100% 100vh; }
-
-.attention .attenttion-wrapper {
+  background-size: 100% 100vh;
   font-family: 'Glacia Indifferent';
   font-size: 2rem;
-  height: 100vh;
-  text-indent: 17vh;
-  padding-top: 17vh; }
-  .attention .attenttion-wrapper .attention-header {
-    font-weight: bold;
-    font-size: 200%; }
-  .attention .attenttion-wrapper .main {
-    font-family: 'Lato';
-    letter-spacing: 0.5rem;
-    font-weight: bold;
-    font-size: 3rem; }
-  .attention .attenttion-wrapper button {
+  height: calc(100vh - 2rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+  .top-wrapper .home-heading {
+    padding-bottom: 0.5em;
+    font-size: 250%; }
+  .top-wrapper .home-subheading {
+    padding-bottom: 1em; }
+  .top-wrapper .know-cost {
     align-self: flex-start;
     font-size: 2rem;
     align-items: center;
@@ -28,7 +24,7 @@
     border-style: none;
     margin-top: 15px;
     border-radius: 10px; }
-  .attention .attenttion-wrapper button:hover {
+  .top-wrapper .know-cost:hover {
     cursor: pointer;
     background-color: orange; }
 
@@ -71,11 +67,13 @@
           padding-bottom: 0.5rem; }
         .interest .benefits .benefits-item .benefits-text .benefits-text-content {
           font-size: 1.25rem; }
-      .interest .benefits .benefits-item .benefits-icon, .interest .benefits .benefits-item .benefits-text {
+      .interest .benefits .benefits-item .benefits-icon,
+      .interest .benefits .benefits-item .benefits-text {
         flex: 47%;
         max-width: 47%;
         border-top: 2px dashed black; }
-    .interest .benefits .benefits-item.last-border .benefits-icon, .interest .benefits .benefits-item.last-border .benefits-text {
+    .interest .benefits .benefits-item.last-border .benefits-icon,
+    .interest .benefits .benefits-item.last-border .benefits-text {
       border-bottom: 2px dashed black; }
 
 .works {
@@ -125,7 +123,8 @@
   font-size: 1.5rem;
   padding: 3rem;
   padding-top: 1rem; }
-  .comments .comments-header, .comments .comments-subheader {
+  .comments .comments-header,
+  .comments .comments-subheader {
     text-align: center; }
   .comments .comments-header {
     text-transform: uppercase;
