--- a/webapi-express/public/stylesheets/layout.css
+++ b/webapi-express/public/stylesheets/layout.css
@@ -1,4 +1,20 @@
 @import url("https://fonts.googleapis.com/css?family=Lato|Montserrat|Nunito|PT+Sans|Ultra|Vollkorn");
+@font-face {
+  font-family: "Nunito Light";
+  src: url("/assets/fonts/Nunito-Light.eot?") format("eot"), url("/assets/fonts/Nunito-Light.woff") format("woff"), url("/assets/fonts/Nunito-Light.ttf") format("truetype"), url("/assets/fonts/Nunito-Light.svg#Nunito-Light") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Glacia Indifferent';
+  src: url("/assets/fonts/GlacialIndifference-Regular.otf");
+  font-weight: normal; }
+
+@font-face {
+  font-family: 'Glacia Indifferent';
+  src: url("/assets/fonts/GlacialIndifference-Bold.otf");
+  font-weight: bold; }
+
 body {
   font-size: 20px;
   color: #212529;
@@ -89,22 +105,6 @@ body {
   margin: 0;
   padding: 0; }
 
-@font-face {
-  font-family: "Nunito Light";
-  src: url("/assets/fonts/Nunito-Light.eot?") format("eot"), url("/assets/fonts/Nunito-Light.woff") format("woff"), url("/assets/fonts/Nunito-Light.ttf") format("truetype"), url("/assets/fonts/Nunito-Light.svg#Nunito-Light") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'Glacia Indifferent';
-  src: url("/assets/fonts/GlacialIndifference-Regular.otf");
-  font-weight: normal; }
-
-@font-face {
-  font-family: 'Glacia Indifferent';
-  src: url("/assets/fonts/GlacialIndifference-Bold.otf");
-  font-weight: bold; }
-
 .body-wrapper {
   padding-top: 3em; }
 
@@ -133,11 +133,13 @@ body {
       background: transparent; }
       #mainNav .navbar-brand {
         padding: 10px 20px;
+        padding-left: 0;
         color: #000; }
         #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
           color: rgba(0, 0, 0, 0.8); }
       #mainNav .navbar-nav > li.nav-item > a {
         padding: 10px 20px;
+        padding-left: 0;
         color: #000; }
         #mainNav .navbar-nav > li.nav-item > a:focus, #mainNav .navbar-nav > li.nav-item > a:hover {
           color: rgba(0, 0, 0, 0.8); } }
