--- a/webapi-express/scss/layout.scss
+++ b/webapi-express/scss/layout.scss
@@ -1,7 +1,8 @@
 @import "style.scss";
 .body-wrapper {
-    padding-top: 3em;
+  padding-top: 3em;
 }
+
 // Styling for the navbar
 #mainNav {
   position: absolute;
@@ -20,8 +21,8 @@
     color: $gray-800;
   }
   .navbar-nav {
-    > li.nav-item {
-      > a {
+    >li.nav-item {
+      >a {
         font-size: 12px;
         font-weight: 800;
         letter-spacing: 1px;
@@ -34,6 +35,7 @@
     background: transparent;
     .navbar-brand {
       padding: 10px 20px;
+      padding-left: 0;
       color: $black;
       &:focus,
       &:hover {
@@ -41,9 +43,10 @@
       }
     }
     .navbar-nav {
-      > li.nav-item {
-        > a {
+      >li.nav-item {
+        >a {
           padding: 10px 20px;
+          padding-left: 0;
           color: $black;
           &:focus,
           &:hover {
@@ -81,8 +84,8 @@
         }
       }
       .navbar-nav {
-        > li.nav-item {
-          > a {
+        >li.nav-item {
+          >a {
             color: $gray-900;
             &:focus,
             &:hover {
@@ -109,7 +112,6 @@
   font-size: 1.5rem;
   padding: 1rem 5rem;
   font-family: 'Glacia Indifferent';
-
   .top {
     display: flex;
     border-bottom: 3px white solid;
