--- a/webapi-express/scss/style.scss
+++ b/webapi-express/scss/style.scss
@@ -1,6 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Montserrat|Nunito|PT+Sans|Ultra|Vollkorn');
+@font-face {
+  font-family: "Nunito Light";
+  src: url("/assets/fonts/Nunito-Light.eot?") format("eot"), url("/assets/fonts/Nunito-Light.woff") format("woff"), url("/assets/fonts/Nunito-Light.ttf") format("truetype"), url("/assets/fonts/Nunito-Light.svg#Nunito-Light") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
-$white:    #fff !default;
+@font-face {
+  font-family: 'Glacia Indifferent';
+  src: url("/assets/fonts/GlacialIndifference-Regular.otf");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Glacia Indifferent';
+  src: url("/assets/fonts/GlacialIndifference-Bold.otf");
+  font-weight: bold;
+}
+
+$white : #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -10,31 +28,30 @@ $gray-600: #868e96 !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$black:    #000 !default;
-
-$blue:    #007bff !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
-$green:   #28a745 !default;
-$teal:    #0085A1 !default;
-$cyan:    #17a2b8 !default;
-
-$primary:       $teal !default;
-$secondary:     $gray-600 !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-100 !default;
-$dark:          $gray-800 !default;
-
+$black : #000 !default;
+$blue : #007bff !default;
+$indigo : #6610f2 !default;
+$purple : #6f42c1 !default;
+$pink : #e83e8c !default;
+$red : #dc3545 !default;
+$orange : #fd7e14 !default;
+$yellow : #ffc107 !default;
+$green : #28a745 !default;
+$teal : #0085A1 !default;
+$cyan : #17a2b8 !default;
+$primary : $teal !default;
+$secondary : $gray-600 !default;
+$success : $green !default;
+$info : $cyan !default;
+$warning : $yellow !default;
+$danger : $red !default;
+$light : $gray-100 !default;
+$dark : $gray-800 !default;
 // Mixins
 // Bootstrap Button Variant
-@mixin button-variant($color, $background, $border) {
+@mixin button-variant($color,
+$background,
+$border) {
   color: $color;
   border-color: $border;
   background-color: $background;
@@ -51,7 +68,7 @@ $dark:          $gray-800 !default;
   }
   &.active,
   &:active,
-  .open > &.dropdown-toggle {
+  .open>&.dropdown-toggle {
     color: $color;
     border-color: darken($border, 12%);
     background-color: darken($background, 10%);
@@ -65,7 +82,7 @@ $dark:          $gray-800 !default;
   }
   &.active,
   &:active,
-  .open > &.dropdown-toggle {
+  .open>&.dropdown-toggle {
     background-image: none;
   }
   &.disabled,
@@ -83,20 +100,24 @@ $dark:          $gray-800 !default;
     background-color: $color;
   }
 }
+
 @mixin transition-all() {
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
 }
+
 @mixin background-cover() {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+
 @mixin serif-font() {
   font-family: 'Lora', 'Times New Roman', serif;
 }
+
 @mixin sans-serif-font() {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -210,23 +231,4 @@ img::-moz-selection {
 body {
   margin: 0;
   padding: 0;
-}
-
-@font-face {
-  font-family: "Nunito Light";
-  src: url("/assets/fonts/Nunito-Light.eot?") format("eot"), url("/assets/fonts/Nunito-Light.woff") format("woff"), url("/assets/fonts/Nunito-Light.ttf") format("truetype"), url("/assets/fonts/Nunito-Light.svg#Nunito-Light") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Glacia Indifferent';
-  src: url("/assets/fonts/GlacialIndifference-Regular.otf");
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: 'Glacia Indifferent';
-  src: url("/assets/fonts/GlacialIndifference-Bold.otf");
-  font-weight: bold;
 }
