--- a/webapi-express/scss/home.scss
+++ b/webapi-express/scss/home.scss
@@ -1,3 +1,4 @@
+/*#F2F2F2 #666D89 #A3A7B9*/
 .top-wrapper {
   height: 100vh;
   background-image: url('/assets/img/smms_bg.jpg');
@@ -33,19 +34,55 @@
   }
 }
 
+.passion-colors {
+  color: #31333c;
+  background-color:#F2F2F2; 
+}
+
+.review {
+  padding-top: 1em;
+  .review-icon {
+    font-size: 350%;
+  }
+  .usefull {
+    background: white;
+    padding: 1em;
+    padding-top: 3em;
+    border-radius: 10px;
+    position: relative;
+    .usefull-header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 0 1em;
+      padding-bottom: 0.25em;
+      border: 1px black solid;
+      border-top: none;
+      border-left: none;
+      border-bottom-right-radius: 12px;
+    }
+    .usefull-item:not(:last-child()) {
+      border-left: 1px black solid;
+    }
+  }
+  .image-wrapper {
+    text-align: center;
+    border-radius: 39px;
+    height: 420px;
+    overflow: hidden;
+  }
+}
+
 .interest {
-  padding: 3rem;
   text-align: justify;
+  padding-bottom: 2rem;
   font-size: 1.5rem;
   padding-top: 1rem;
   .interest-intro {
-    width: 70%;
     margin: 0 auto;
     font-size: 1.25rem;
   }
   .benefits {
-    width: 70%;
-    margin: 0 auto;
     h3 {
       text-align: center;
       border-top: 2px dashed;
@@ -102,9 +139,8 @@
   font-size: 1.5rem;
   background-image: url("/assets/img/works_bg.png");
   .works-wrapper {
-    width: 70%;
-    margin: 0 auto;
     h2 {
+      padding: 2rem;
       color: white;
       text-transform: uppercase;
       font-size: 2.5rem;
@@ -137,7 +173,6 @@
         }
         .works-item-description {
           padding: 1rem;
-          text-align: center;
           border: 1px #e25920 solid;
         }
       }
@@ -173,6 +208,7 @@
     flex-wrap: wrap;
     height: 100vw;
     max-height: 800px;
+    overflow: hidden;
     .user {
       padding: 2rem;
       width: 25%;
@@ -180,111 +216,138 @@
   }
 }
 
-.flaer {
-  display: flex;
-  padding: 5rem;
-  background-color: #efeeee;
-  .left {
-    width: 100%;
-    font-family: 'Glacia Indifferent';
-    display: flex;
-    justify-content: space-around;
-    .item {
-      display: flex;
-      align-items: center;
-      padding-right: 1.8rem;
-      flex-wrap: wrap;
-      .index {
-        font-family: 'Ultra';
-        font-weight: bold;
-        font-size: 6rem;
-        width: 84px;
-        text-align: center;
-      }
-      .context {
-        .context-header {
-          font-size: 2rem;
-          font-weight: bold;
-        }
-        .context-subheader {
-          font-size: 1.5rem;
-          font-weight: normal;
-        }
-      }
-      .action {
-        width: 100%;
-        text-align: center;
-        background: white;
-        padding: 0.75rem 0;
-        border-radius: 19px;
-        font-weight: bold;
-        text-transform: uppercase;
-        font-size: 2rem;
-        color: black;
-        text-decoration: none;
-      }
-      .action:hover {
-        background-color: darksalmon;
-        cursor: pointer;
-      }
-    }
+.comments {
+  background: #eee;
+  @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+  #team {
+      background: #eee !important;
   }
-  .right {
-    flex: 30%;
-    padding-top: 1.2rem;
-    font-size: 1.2rem;
-    align-items: center;
-    display: flex;
-    button {
-      width: 42%;
-      font-size: 1.5rem;
-      padding: 10px 20px;
-      border-radius: 10px;
-      border-style: none;
-      background-color: white;
-    }
-    form {
-      outline: 1px white solid;
-      padding: 18px;
-    }
-    button:hover {
-      cursor: pointer;
-      background-color: darksalmon;
-    }
-    input {
-      padding: 0.5rem 1rem;
+
+  .btn-primary:hover,
+  .btn-primary:focus {
+      background-color: #201b26;
+      border-color: #201b26;
+      box-shadow: none;
       outline: none;
-      font-size: 1.2rem;
-      border-style: none;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-    }
+  }
+
+  .btn-primary {
+      color: #fff;
+      background-color: #201b26;
+      border-color: #201b26;
+  }
+
+  section {
+      padding: 60px 0;
+  }
+
+  section .section-title {
+      text-align: center;
+      color: #201b26;
+      margin-bottom: 50px;
+      text-transform: uppercase;
+  }
+
+  #team .card {
+      border: none;
+      background: #ffffff;
+  }
+
+  .image-flip:hover .backside,
+  .image-flip.hover .backside {
+      -webkit-transform: rotateY(0deg);
+      -moz-transform: rotateY(0deg);
+      -o-transform: rotateY(0deg);
+      -ms-transform: rotateY(0deg);
+      transform: rotateY(0deg);
+      border-radius: .25rem;
+  }
+
+  .image-flip:hover .frontside,
+  .image-flip.hover .frontside {
+      -webkit-transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg);
+      -o-transform: rotateY(180deg);
+      transform: rotateY(180deg);
+  }
+
+  .mainflip {
+      -webkit-transition: 1s;
+      -webkit-transform-style: preserve-3d;
+      -ms-transition: 1s;
+      -moz-transition: 1s;
+      -moz-transform: perspective(1000px);
+      -moz-transform-style: preserve-3d;
+      -ms-transform-style: preserve-3d;
+      transition: 1s;
+      transform-style: preserve-3d;
+      position: relative;
+  }
+
+  .frontside {
+      position: relative;
+      -webkit-transform: rotateY(0deg);
+      -ms-transform: rotateY(0deg);
+      z-index: 2;
+      margin-bottom: 30px;
+  }
+
+  .backside {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: white;
+      -webkit-transform: rotateY(-180deg);
+      -moz-transform: rotateY(-180deg);
+      -o-transform: rotateY(-180deg);
+      -ms-transform: rotateY(-180deg);
+      transform: rotateY(-180deg);
+      -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+      -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+      box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+  }
+
+  .frontside,
+  .backside {
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
+      -ms-backface-visibility: hidden;
+      backface-visibility: hidden;
+      -webkit-transition: 1s;
+      -webkit-transform-style: preserve-3d;
+      -moz-transition: 1s;
+      -moz-transform-style: preserve-3d;
+      -o-transition: 1s;
+      -o-transform-style: preserve-3d;
+      -ms-transform-style: preserve-3d;
+      -ms-transition: 1s;
+      transition: 1s;
+      transform-style: preserve-3d;
+  }
+
+  .frontside .card,
+  .backside .card {
+      min-height: 312px;
+  }
+
+  .backside .card a {
+      font-size: 18px;
+      color: #007b5e !important;
+  }
+
+  .frontside .card .card-title,
+  .backside .card .card-title {
+      color: #201b26 !important;
+  }
+
+  .frontside .card .card-body img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
   }
 }
 
-.photo-content {
-  color: white;
-  .photo-main {}
-}
-
-.footer {
-  background-color: black;
-  color: white;
-  font-size: 1.5rem;
-  padding: 1rem 5rem;
-  font-family: 'Glacia Indifferent';
-  .top {
-    display: flex;
-    border-bottom: 3px white solid;
-    padding-bottom: 1rem;
-    margin-bottom: 1rem;
-    .hrefs {
-      display: flex;
-      flex-flow: column;
-      border-right: 3px white solid;
-      padding-right: 1rem;
-      margin-right: 1rem;
-      padding-left: 1rem;
-    }
-  }
+.buy {
+  padding: 2em 0;
+  padding-top: 1em;
 }
